# rust-blue-pill-tests

./: .gdbinit  Cargo.toml  Embed.toml  Makefile.toml  README  README.md  memory.x  openocd.cfg  tmux-debug
.github/workflows/: rust.yml
attic/: pwm-test1.rs.disabled  usonic-sr04-rtfm.rs.disabled
tools/: openocd.cfg  tmux-debug
