[package]
name = "blue-pill-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[features]
# PWM features: tim/mapping selection
tim2_remap_00 = []
tim2_remap_01 = []
tim2_remap_10 = []
tim2_remap_11 = []

tim3_remap_00 = []
tim3_remap_10 = []

tim4_remap_00 = []

[dependencies]
cortex-m-rt = "0.6.13"
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"
panic-itm = "0.4.2"
panic-halt= "0.2.0"
nb = "0.1.2"
eeprom24x = "0.3.0"
lm75 = "0.1.2"
itm_logger = "0.1.2"

[dependencies.cortex-m-rtfm]
version = "0.5.3"

[dependencies.cortex-m]
version="0.7.1"

[dependencies.embedded-hal]
version="0.2.4"
features=["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt", "medium"]

[dependencies.bitbang-hal]
version = "0.3.2"

[dependencies.infrared]
version = "0.4.0"

[dependencies.shared-bus]
#git = "https://github.com/Rahix/shared-bus.git"
git = "https://github.com/geomatsi/shared-bus.git"
branch = "shared-adc"
features=["cortexm"]
