[package]
name = "blue-pill-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[features]
# PWM features: tim/mapping selection
tim2_remap_00 = []
tim2_remap_01 = []
tim2_remap_10 = []
tim2_remap_11 = []

tim3_remap_00 = []
tim3_remap_10 = []

tim4_remap_00 = []

[dependencies]
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
panic-itm = "0.4"
nb = "0.1"
eeprom24x = "0.3"
lm75 = "0.1"
itm_logger = "0.1"
mfrc522 = "0.2"

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.cortex-m-rtic]
version = "0.5"

[dependencies.cortex-m]
version="0.7"

[dependencies.embedded-hal]
version="0.2"
features=["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["stm32f103", "rt", "medium"]

[dependencies.bitbang-hal]
version = "0.3"

[dependencies.shared-bus]
#git = "https://github.com/Rahix/shared-bus.git"
git = "https://github.com/geomatsi/shared-bus.git"
branch = "shared-adc"
features=["cortex-m"]
